--- a/about.html
+++ b/about.html
@@ -23,6 +23,8 @@
       <h1 class="bg-info"> <a href = "https://makeup-world.herokuapp.com/" type="button" class="btn btn-outline-danger">Makeup APP</a></h1>
       <h1 class="bg-info"> <a href = "https://my-store-amazon-app.herokuapp.com/"  type="button" class="btn btn-outline-danger">Amazon-clone-app</a></h1>
       <a href="https://github.com/farProgrammer/" type="button" class="btn btn btn-outline-success">Github</a>
+      <a href="https://1drv.ms/b/s!Aqg8Whk-mVpPre1EsIutrtCBDXq_Zw?e=t5as5h" type="button" class="btn btn-outline-success">Resume</a>
+    
       
       <a href="https://www.linkedin.com/in/farheena-khan-293b92199/" type="button" class="btn btn-outline-success">LinkedIn</a>
     </div>
