--- a/about.html
+++ b/about.html
@@ -53,12 +53,8 @@
         <img class="card-img-top" src="images/profile.jpeg" alt="Card image cap">
         <div class="card-body">
           <p class="card-text">
-         I am a Web Developer from Dallas ,Texas let me introduce myself I have started my career in coding as a Web Designer I am passionate about applying responsive design principles and watching my web pages shrinks into mobile screen and still look amazing
-
-        My speciality include quick learning new skill and programming language- Technical skill · Frontend: JavaScript, jQuery, CSS, Bootstrap, HTML, AJAX/Axios · Backend: Python/Flask and Node/Express · Testing: Jasmine, Jest, Python unittest (unit tests and integration tests)· Database and related: PostgreSQL, SQLAlchemy. React Js
-        
-        Independent Work,Group work,Team Motivation,
-        Critical Thinking,Deescalating High Pressure/Emotional Situations.</p>
+       A Software Developer With A Passion For Creating Clean, Readable Code With Experience In Language Such As JavaScript And Python Using Flask and Node To Create Full Restful APIs with PostgreSQL Database. Currently Enrolled In Springboard Software Engineering Boot Camp To Strengthen Full Stack Development Skillset. A Problem Solver By Nature 
+            Focusing On Optimization In Order To Provide Maximum Value. Looking Forward To Being A Part Of A Company That Is Focused On Growth And Improving Lives.</p>
         </div>
     </div>
     </div>
