--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
       <h3 class="mb-3">Work Experience</h3>
       <h4>Web Designer Freelancer</h4>
    <div>   <strong>2017-current</strong>
-
-      A Software Developer with a passion for creating clean, readable code with experience in language such as JavaScript and Python using Flaskand Node to create full Restful APIswith PostgreSQL Database. Currently Enrolled in Springboard Software Engineering Boot camp to strengthen full stack development skillset. A problem solver by nature focusing on optimization in order to provide maximum value. Looking forward to being a part of a company that is focused on growth and improving lives. 
+A Software Developer With A Passion For Creating Clean, Readable Code With Experience In Language Such As JavaScript And Python Using Flask and Node To Create Full Restful APIs with PostgreSQL Database. Currently Enrolled In Springboard Software Engineering Boot Camp To Strengthen Full Stack Development Skillset. A Problem Solver By Nature Focusing On Optimization In Order To Provide Maximum Value. 
+     Looking Forward To Being A Part Of A Company That Is Focused On Growth And Improving Lives.
+    
 
     </div>
     
